# CustomWidget

./: CMakeLists.txt  CustomWidget_de_DE.ts  dialoginfo.cpp  dialoginfo.h  dialoginfo.ui  formcustomwidget.cpp  formcustomwidget.h  formcustomwidget.ui  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
